--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             <div class="form-card">
                 <h2>Encode Teks ke Gambar</h2>
                 <form method="post" enctype="multipart/form-data">
-                    <label for="image_encode">Pilih Gambar (PNG, BMP, JPG):</label>
+                    <label for="image_encode">Pilih Gambar (Only PNG!):</label>
                     <input type="file" name="image" id="image_encode" accept="image/*" required>
                     
                     <label for="secret_text">Teks Rahasia:</label>
